--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@react-spring/web": "^9.7.5",
+    "axios": "^1.9.0",
     "framer-motion": "^12.5.0",
     "gsap": "^3.12.7",
     "react": "^19.0.0",
